Fix hero title image alignment

--- a/_sass/homepage.sass
+++ b/_sass/homepage.sass
@@ -4,14 +4,11 @@
     margin: 0 calc(0px - #{$normal-space})
     padding: 0 $normal-space 1px
     .hero-title
-        position: relative
         img.hero-logo
             width: 7em
+            vertical-align: bottom
         h1
-            position: absolute
             display: inline-block
-            top: 50%
-            transform: translateY(-50%)
             margin: 0 0 0 0.5em
             font-weight: bold
             font-size: 4em
